🐛 FIX: Remove box shadow

--- a/frontend/src/components/Navbar/Navbar.scss
+++ b/frontend/src/components/Navbar/Navbar.scss
@@ -7,7 +7,7 @@
 
   padding: 1rem 2rem;
   background: rgba(255, 255, 255, 0.25);
-  // box-shadow: 0 8px 32px 0 rgba( 31, 38, 135, 0.37 );
+  // box-shadow: 0 8px 32px 0 rgba(31, 38, 135, 0.37);
   backdrop-filter: blur(4px);
   -webkit-backdrop-filter: blur(4px);
   border: 1px solid rgba(255, 255, 255, 0.18);
@@ -17,16 +17,56 @@
 
 .app__navbar-logo {
   display: flex;
-  justify-content: flex-start;
+  height: 100%;
   align-items: center;
+  justify-content: center;
 
-  img {
-    width: 90px;
-    height: 20px;
+  p {
+    cursor: pointer;
+    animation: text-shadow 1.5s ease-in-out infinite;
+    font-size: 1.2em;
+    font-weight: 900;
+    line-height: 1;
 
-    @media screen and (min-width: 2000px) {
-      width: 180px;
-      height: 40px;
+    &:hover {
+      animation-play-state: paused;
+    }
+  }
+
+  @keyframes text-shadow {
+    0% {
+      transform: translateY(0);
+      text-shadow: 0 0 0 #0c2ffb, 0 0 0 #2cfcfd, 0 0 0 #fb203b, 0 0 0 #fefc4b;
+    }
+
+    20% {
+      transform: translateY(-1em);
+      text-shadow: 0 0.125em 0 #0c2ffb, 0 0.25em 0 #2cfcfd, 0 -0.125em 0 #fb203b,
+        0 -0.25em 0 #fefc4b;
+    }
+
+    40% {
+      transform: translateY(0.5em);
+      text-shadow: 0 -0.0625em 0 #0c2ffb, 0 -0.125em 0 #2cfcfd,
+        0 0.0625em 0 #fb203b, 0 0.125em 0 #fefc4b;
+    }
+
+    60% {
+      transform: translateY(-0.25em);
+      text-shadow: 0 0.03125em 0 #0c2ffb, 0 0.0625em 0 #2cfcfd,
+        0 -0.03125em 0 #fb203b, 0 -0.0625em 0 #fefc4b;
+    }
+
+    80% {
+      transform: translateY(0);
+      text-shadow: 0 0 0 #0c2ffb, 0 0 0 #2cfcfd, 0 0 0 #fb203b, 0 0 0 #fefc4b;
+    }
+  }
+
+  @media (prefers-reduced-motion: reduce) {
+    * {
+      animation: none !important;
+      transition: none !important;
     }
   }
 }
